- Try to use user's locale, or a similar language, as game language (MestreLion)
- Launcher for Linux is now "singularity"
- Revamped Options screen, including new resolutions (MestreLion)

OTHER CHANGES:
- Created .gitignore and .gitattributes files to aid development (Mestrelion)
- New i18n and hotkey approach. E:S is now fully translatable (MestreLion)
- New tools under utils/ dir (MestreLion)

v0.30c (release 2011.06.11):

USER-VISIBLE CHANGES:
- Fixed crash in Python 2.7 due to different handling of locale strings. (Phil
  Bordelon, Roger Pixley/Daskreech for bug report)

v0.30b (release 2010.07.28):

USER-VISIBLE CHANGES:
- --nosound properly ignores the sound system.(emh, Cyclotron / Daryl for bug
  report)
- Better appearance when no items will fit in the slot. (emh)
- Knowledge screen is refreshed properly when loading a game. (emh)

v0.30a (release 2010.02.06):

USER-VISIBLE CHANGES:
- Time Capsule English text no longer assumes the Antarctic. (Phil Bordelon,
  Avaera8820 for bug report)
- Game pauses when random events occur. (Phil Bordelon, captainsegfault for
  bug report, justapawn for initial implementation)
- Savefiles are now in sorted order instead of an arbitrary arrangement.
  (remur_030)
- Additional corrections to de_DE translation. (Christian Gerloff,
  Developer-KI)
- Really make the Projects do something. (Phil, WvWisokee for bug report)
- "news" and "media" are only synonyms to humans.  (FM, captainsegfault for bug
  report)
- Support the Delete and Keypad Enter keys properly. (Phil, Yoshi for bug
  report)
- Stopped building additional CPUs from refunding the money previously paid.
  (FM, Yoshi for bug report)
- Location name fix. (Phil, pederick for bug report)
- Fix a crash with handling scrollbars. (Phil, netantho for bug report)
- Fix a bug where the finance report wouldn't always display. (Raymond
  Martinau)
- Updated (but not fully complete) es_AR translation. (Guga)
* New it_IT translation. (Daniele Sapino)